# scopeflow-api

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 612525d8a64e_add_task_assignee.py  61c98480469e_add_task_updated_audit_action.py  73ba550d587e_create_users_table.py  94f7d088cde3_create_organizations_and_organization_.py  afa12643e3da_create_projects_and_project_members_.py  c39f4297a592_create_tasks_table.py  ca6c154d50ea_add_task_approval_details.py  d5e92210f256_create_audit_logs_table.py  db9b84675e52_create_comments_table.py
app/: main.py
app/core/: config.py  security.py
app/db/: database.py
app/enums/: __init__.py  audit_action.py  organization_role.py  scope_category.py  task_status.py
app/models/: __init__.py  audit_log.py  comment.py  organization.py  organization_member.py  project.py  project_member.py  task.py  user.py
app/repositories/: __init__.py  audit_log_repository.py  comment_repository.py  organization_repository.py  project_repository.py  report_repository.py  task_repository.py  user_repository.py
app/routers/: audit_log_router.py  auth_router.py  comment_router.py  health_router.py  organization_router.py  project_router.py  report_router.py  task_router.py
app/schemas/: __init__.py  audit_log.py  auth.py  comment.py  organization.py  project.py  report.py  task.py
app/services/: __init__.py  (+7 more)
tests/: conftest.py  test_audit_logs.py  test_auth.py  test_comments.py  test_organizations.py  test_projects.py  test_reports.py  test_tasks.py
